# pos-tech-fiap-ai-scientist

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-jbs-eda.html  1.0-jbs-eda.ipynb  1.0-jbs-modeling.ipynb
reports/: 1.0-jbs-eda.html
