[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "projetos_pos_tech_fiap"
version = "0.0.1"
description = "Neste diret\u00f3rio estar\u00e3o todos os projetos referentes \u00e0 P\u00f3s tech  da FIAP"
authors = [
  { name = "Julia Santos" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["projetos_pos_tech_fiap"]
include = ["pyproject.toml", "projetos_pos_tech_fiap/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["projetos_pos_tech_fiap"]
force-sort-within-sections = true

